--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,28 @@
-version: "3"
+version: "3.9"
+
 services:
-    postgres:
-        container_name: vodokachka-db
-        image: postgres:latest
-        restart: always
+    api:
+        container_name: api
+        image: laravel-api-container
+        build: .
+        ports:
+            - "8000:8000"
+        env_file:
+            - .env
+        depends_on:
+            - db
+
+    db:
+        container_name: db
+        image: postgres:12
         ports:
             - "5432:5432"
-        volumes:
-            - data:/var/lib/postgresql/data
-        networks:
-            - postgres
         environment:
-            - POSTGRES_USER=${DB_USERNAME}
-            - POSTGRES_PASSWORD=${DB_PASSWORD}
-            - POSTGRES_DB=${DB_DATABASE}
-
-networks:
-    postgres:
-        driver: bridge
+            POSTGRES_USER: ${DB_USERNAME}
+            POSTGRES_PASSWORD: ${DB_PASSWORD}
+            POSTGRES_DB: ${DB_DATABASE}
+        volumes:
+            - pgdata:/var/lib/postgresql/data
 
 volumes:
-    data:
+    pgdata: {}
