--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# application
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:y6QGUDBG2ydVkFdQOCL02uTmXG5wekpuWOH16w8nodA=
@@ -8,10 +9,11 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+# database
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=5432
+DB_DATABASE=vodokachka-db
 DB_USERNAME=root
 DB_PASSWORD=password
 
