--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,23 @@
-version: "3.9"
-
+version: "3"
 services:
-    api:
-        container_name: api
-        image: laravel-api-container
-        build: .
-        ports:
-            - "8000:8000"
-        env_file:
-            - .env
-        depends_on:
-            - db
-
-    db:
-        container_name: db
-        image: postgres:12
+    postgres:
+        container_name: vodokachka-db
+        image: postgres:latest
+        restart: always
         ports:
             - "5432:5432"
-        environment:
-            POSTGRES_USER: ${DB_USERNAME}
-            POSTGRES_PASSWORD: ${DB_PASSWORD}
-            POSTGRES_DB: ${DB_DATABASE}
         volumes:
-            - pgdata:/var/lib/postgresql/data
+            - data:/var/lib/postgresql/data
+        networks:
+            - postgres
+        environment:
+            - POSTGRES_USER=${DB_USERNAME}
+            - POSTGRES_PASSWORD=${DB_PASSWORD}
+            - POSTGRES_DB=${DB_DATABASE}
+
+networks:
+    postgres:
+        driver: bridge
 
 volumes:
-    pgdata: {}
+    data:
