--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ LOG_LEVEL=debug
 
 # database
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+# docker container name
+DB_HOST=vodokachka-db
 DB_PORT=5432
 DB_DATABASE=vodokachka-db
 DB_USERNAME=root
